ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tradelocker-ingress
spec:
  ingressClassName: nginx

  rules:

    # FRONTEND
    - host: frontend.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    # DASHBOARD
    - host: dashboard.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 80

    # BACKEND API
    - host: api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
